# renewal_reminder

./: .gitignore  Dockerfile  Makefile  README.md  config.example.ini  example.csv  pyproject.toml  pytest.ini  script.py  script.sh  setup.py
docker/: docker-compose.yaml
docker/base/: Dockerfile
docker/mock_telegram_bot/: Dockerfile  app.py
docker/renewal_reminder/: Dockerfile
docs/: .buildinfo  developing_renewal_reminder.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  using_renewal_reminder.html
docs/.doctrees/: developing_renewal_reminder.doctree  environment.pickle  index.doctree  installation.doctree  using_renewal_reminder.doctree
docs/.doctrees/autoapi/: index.doctree
docs/_sources/: developing_renewal_reminder.rst.txt  index.rst.txt  using_renewal_reminder.rst.txt
docs/_sources/autoapi/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/app/: index.html
docs/autoapi/conf/: index.html
docs/autoapi/renewal_reminder/: index.html
docs/autoapi/test_bot/: index.html
docs/autoapi/test_checker/: index.html
docs/autoapi/test_csv/: index.html
docs/autoapi/tests/: index.html
docsrc/: conf.py  installation.rst
renewal_reminder/: app.py  config.py
renewal_reminder/business_logic/: checker.py
renewal_reminder/business_logic/model/: member.py
renewal_reminder/infrastructure/: logger.py  renewals.py
renewal_reminder/ports/: checker.py  messenger.py  ports.py  renewal.py  storage.py
src/renewals/: checker.py
tests/utils/: request.py
(+110 files in other folders)
