[tool.poetry]
name = "renewal_reminder"
version = "0.1.0"
description = ""
authors = ["Ben Roberts"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^12.0"
tabulate = "^0.8.5"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
behave = "^1.2.6"
sphinx = "^3.2.1"
sphinx_rtd_theme = "^0.5.0"
sphinx_autoapi = "^1.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
